# django-template

./: .cursorignore  .cursorrules  .dockerignore  .env.template  .gitignore  .prettierrc  .watchmanconfig  CLAUDE.md  Dockerfile  Dockerfile.jinja  README.md  README.md.jinja  copier.yml  db.sqlite3  docker-compose.yml  docker-compose.yml.jinja  justfile  manage.py  mise.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: api.py  schemas.py  settings.py  urls.py
backend/api/: __init__.py
backend/core/: admin.py  middleware.py  models.py  views.py
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: theme.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
src/: asgi.py  celery_config.py  settings.py  urls.py  utils.py  wsgi.py
src/api/: __init__.py  schemas.py
src/config/: urls.py
src/core/: admin.py  apps.py  cron_jobs.py  tasks.py  tests.py  views.py
template/: .cursorignore  .env.development  .env.production  .env.template  .gitignore  CLAUDE.md.jinja  README.md.jinja  docker-compose.yml  mise.toml  pyproject.toml.jinja
template/frontend/: package.json.jinja  tsconfig.app.json
template/scripts/: ensure_pg_schema.sh
template/src/: asgi.py.jinja  settings.py.jinja  urls.py.jinja  wsgi.py.jinja
templates/: index.html
templates/admin/: index.html  (+1 more)
web_template/: api.py  asgi.py  settings.py  urls.py  wsgi.py
{{project_name}}/: api.py.jinja  jinja2.py  settings.py.jinja  urls.py.jinja
(+129 files in other folders)
