[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.1.1",
    "django-allauth>=65.0.2",
    "django-ninja>=1.3.0",
    "djecorator>=1.1.0",
    "granian>=1.6.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "django-cors-headers>=4.4.0",
    "django-anymail[amazon-ses]>=12.0",
]
